# ROS-1-GAZEBO-EXPLORATION

./: .gitignore  README.md  exploration_node.py  map_save_node.py  porcentaje_borde_node.py  target_point_node.py
ros_autonomous_exploration/: CMakeLists.txt  package.xml
ros_autonomous_exploration/launch/: moviles.launch
ros_autonomous_exploration/rviz/: default.rviz
ros_autonomous_exploration/src/: exploration_node.py  map_save_node.py  porcentaje_borde_node.py  target_point_node.py
